<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/b1"
    tools:context=".Login">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_50sdp">
        <EditText
            android:id="@+id/txt_usernameDuringLogin"
            android:layout_width="@dimen/_350sdp"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:drawableLeft="@drawable/ic_person_outline_black_24dp"
            android:drawableStart="@drawable/ic_person_outline_black_24dp"
            android:drawablePadding="@dimen/_10sdp"
            android:inputType="text"/>

        <EditText
            android:id="@+id/txt_passwordDuringLogin"
            android:layout_width="@dimen/_350sdp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="98dp"
            android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
            android:drawablePadding="@dimen/_10sdp"
            android:drawableStart="@drawable/ic_lock_outline_black_24dp"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/buttonstyleblue"
            android:text="@string/login" />

        <Button
            android:id="@+id/btn_callAdmin"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="147dp"
            android:background="@drawable/buttonstyleblue"
            android:text="@string/call_admin" />
    </RelativeLayout>

</RelativeLayout>